--- a/src/Wasm/Wasm.csproj
+++ b/src/Wasm/Wasm.csproj
@@ -1,25 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WebAssembly">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-        <WasmMainJSPath>main.js</WasmMainJSPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <InvariantGlobalization>true</InvariantGlobalization>
-        <EnableAggressiveTrimming>true</EnableAggressiveTrimming>
-        <PublishTrimmed>true</PublishTrimmed>
-        <TrimMode>full</TrimMode>
-        <!--        <RunAOTCompilation>true</RunAOTCompilation>-->
-        <WasmBuildNative>true</WasmBuildNative>
-        <WasmNativeStrip>true</WasmNativeStrip>
-        <WasmAllowUndefinedSymbols>true</WasmAllowUndefinedSymbols>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <WasmExtraFilesToDeploy Include="index.html" />
-        <WasmExtraFilesToDeploy Include="main.js" />
         <NativeFileReference Include="..\..\lib\native\target\wasm32-wasi\release\libnative.a" />
     </ItemGroup>
 
@@ -27,18 +14,10 @@
         <ProjectReference Include="..\App\App.csproj" />
     </ItemGroup>
 
-    <Choose>
-        <When Condition=" $(Configuration) == 'Debug' ">
-            <PropertyGroup>
-                <WasmEmitSymbolMap>true</WasmEmitSymbolMap>
-                <EmccFlags>-sUSE_GLFW=3 -sVERBOSE=1 -Wbad-function-cast -Wcast-function-type -O2 -g3 -sINITIAL_MEMORY=128MB -sMAXIMUM_MEMORY=2048MB -sALLOW_MEMORY_GROWTH=1 -lexports.js</EmccFlags>
-            </PropertyGroup>
-        </When>
-        <When Condition=" $(Configuration) == 'Release' ">
-            <PropertyGroup>
-                <EmccFlags>-s USE_GLFW=3 -O3 -lexports.js</EmccFlags>
-            </PropertyGroup>
-        </When>
-    </Choose>
+    <PropertyGroup>
+        <EmccExtraLDFlags>-sFULL_ES3</EmccExtraLDFlags>
+        <WasmEmitSymbolMap>true</WasmEmitSymbolMap>
+        <WasmAllowUndefinedSymbols>true</WasmAllowUndefinedSymbols>
+    </PropertyGroup>
 
 </Project>
