--- a/src/Program/Program.csproj
+++ b/src/Program/Program.csproj
@@ -7,11 +7,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-    <ItemGroup>
-        <Content Include="..\..\lib\native\target\release\native.dll">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
+<!--    <ItemGroup>-->
+<!--        <Content Include="..\..\lib\native\target\release\native.dll">-->
+<!--            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>-->
+<!--        </Content>-->
+<!--    </ItemGroup>-->
 
     <ItemGroup>
         <ProjectReference Include="..\App\App.csproj"/>
